--- a/agregar.html
+++ b/agregar.html
@@ -70,10 +70,10 @@
         <option value="forma">Forma farmacéutica</option>
       </select>
 
-      <input type="text" id="termino" placeholder="Término o abreviatura" required>
+      <input type="text" id="termino" placeholder="Agregar palabra" required>
       <input type="text" id="traduccion" placeholder="Traducción">
       <input type="text" id="pronunciacion" placeholder="Pronunciación">
-      <input type="text" id="categoria" placeholder="Categoría gramatical">
+      <input type="text" id="categoria" placeholder="Categoría">
       <textarea id="definicion" placeholder="Definición"></textarea>
       <input type="text" id="sinonimos" placeholder="Sinónimos (separados por coma)">
 
