--- a/index.html
+++ b/index.html
@@ -9,16 +9,19 @@
       src: url('Middle-of-April.ttf') format('truetype');
     }
 
-    body {
+    html, body {
       margin: 0;
       padding: 0;
+      height: 100%;
+    }
+
+    body {
       font-family: 'Segoe UI', sans-serif;
       background:
         linear-gradient(to bottom, rgba(0,0,0,0.7), rgba(0,0,0,0.9)),
         url('FONDOOO.jpeg') no-repeat center center fixed;
       background-size: cover;
       background-attachment: fixed;
-      height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -30,7 +33,7 @@
     body.light-mode {
       background:
         linear-gradient(to bottom, rgba(255,255,255,0.8), rgba(255,255,255,0.95)),
-        url('fondo-claro.png') no-repeat center center fixed !important;
+        url('fondo-claro.png') no-repeat center center fixed;
       background-size: cover;
       background-attachment: fixed;
       animation: parallax 60s linear infinite;
@@ -177,9 +180,9 @@
       background: #222;
       border: none;
       color: white;
-      padding: 10px 16px;
-      border-radius: 50px;
-      font-size: 16px;
+      padding: 8px 12px;
+      border-radius: 30px;
+      font-size: 18px;
       cursor: pointer;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
       transition: background 0.3s;
